@@ -27,7 +27,7 @@
 
 #include "cairoint.h"
 
-static cairo_color_t CAIRO_COLOR_DEFAULT = {
+static cairo_color_t const CAIRO_COLOR_DEFAULT = {
     1.0, 1.0, 1.0, 1.0,
     0xffff, 0xffff, 0xffff, 0xffff
 };
